--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -39,7 +39,9 @@
     "eslint": "^8.53.0",
     "prettier": "^3.1.0",
     "tailwindcss": "3.3.5",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "dotenv-cli": "^7.3.0"
+
   },
   "eslintConfig": {
     "root": true,
